fix close button mobile
fixed color

--- a/style.css
+++ b/style.css
@@ -107,6 +107,7 @@ td, th {
   color: #fff;
 }
 
+
 .input-group mb-3 {
 	width: 120px;
 }
@@ -339,8 +340,14 @@ td, th {
 
 .table-responsive .table {
     /*-webkit-overflow-scrolling: touch !important;*/
-	overflow: auto;
+  overflow: auto;  
 }
+
+@media screen and (max-width: 800px){
+.rcw-conversation-container .rcw-close-button {
+    background-color: #343a40;
+}}
+
 @media (max-width: 640px) {
     h1{font-size: 3.0vh;}
 	.calculadora {width: 50px;}
